# VChat.mobile

./: Dockerfile  alembic.ini  requirements.txt
alembic/versions/: d6dad9a26bf0_init_database.py
app/db/: db.py
app/depend/auth/: __init__.py  get_current_user.py
app/dto/: __init__.py
app/form/: __init__.py
app/router/: __init__.py  auth.py
app/utils/: psw.py  stream.py
backend/: alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8f317bf21609_change_revision.py  dd498673944f_change_user_model.py
backend/app/db/: db.py
backend/app/dto/: UserDTOs.py
backend/app/form/: LoginForm.py  RegisterForm.py
backend/app/model/: User.py
backend/app/router/: __init__.py  auth.py  user.py  websocket.py
backend/app/utils/: __init__.py  token.py  websocket_actions.py
mobile/: App.tsx  app.json  metro.config.js  navigation.d.ts  package-lock.json  package.json
mobile/src/: http.ts  utils.ts
mobile/src/component/: Button.tsx  Input.tsx  Loader.tsx  Modal.tsx  UserCard.tsx
mobile/src/component/button/: Button.tsx
mobile/src/component/input/: Input.tsx  input.style.ts  types.ts
mobile/src/const/: navigation.ts  styles.tsx
mobile/src/context/: AuthContext.tsx  CallsProvider.tsx  StreamContext.tsx
mobile/src/context/auth/: AuthStore.ts
mobile/src/hook/: useWebRTC.ts  useWebSocket.ts
mobile/src/layout/: Layout.tsx
mobile/src/router/: AppRouter.tsx  types.ts
mobile/src/screen/call/: CallScreen.tsx
mobile/src/screen/home/: HomeScreen.tsx
mobile/src/screen/in-call/: InCallScreen.tsx
(+4 files in other folders)
