[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alexsandr Ryzhkov <alexsandr.ryzhkov04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.13.1"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
websockets = "^12.0"
stream-python = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
